# PlayerSdk

./: .gitignore  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/jni/ndkbitmap/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/superfactory/player/: MainActivity.kt
app/src/main/java/com/superfactory/player/app/: SDKApplication.kt
app/src/main/java/com/superfactory/player/app/Act/: BaseActivity.kt  CleanLeakUtils.kt
app/src/main/java/com/superfactory/player/app/Danmu/: BiliDanmukuParser.kt  DanmakuAdapter.kt  DanmakuVideoPlayer.kt  SampleListener.kt
app/src/main/java/com/superfactory/player/app/Utils/: DrawableUtils.java  FFmpegUtils.java  FileNameGenerator.java  InputStreamUtil.java  Md5FileNameGenerator.java
app/src/main/java/com/superfactory/player/app/Watch/: NetWatchdog.kt
app/src/main/java/com/superfactory/player/jni/: JniControlHelper.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
